--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,11 @@
   "ChatDatabase": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "ChatFatec",
-    "ChatCollectionName": "messages"
+    "ChatCollectionName": "ChatHub",
+    "ChatDSMCollection": "ChatDSM"
+  },
+  "ConnectionStrings": {
+    "MongoDb": "mongodb://mongodb:27017"
   },
   "Logging": {
     "LogLevel": {
