--- a/chatApi.csproj
+++ b/chatApi.csproj
@@ -4,11 +4,24 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	  <GenerateDocumentationFile>true</GenerateDocumentationFile>
+	  <NoWarn>${NoWarn};1591</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="wwwroot\js\signalr\**" />
+    <Content Remove="wwwroot\js\signalr\**" />
+    <EmbeddedResource Remove="wwwroot\js\signalr\**" />
+    <None Remove="wwwroot\js\signalr\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.29.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
 </Project>
