--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "ChatFatec",
     "ChatCollectionName": "ChatHub",
-    "ChatDSMCollection": "ChatDSM"
+    "ChatDSMCollection": "ChatTech"
   },
   "ConnectionStrings": {
     "MongoDb": "mongodb://mongodb:27017"
