--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,8 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "ChatFatec",
     "ChatCollectionName": "ChatHub",
-    "ChatDSMCollection": "ChatTech"
+    "ChatTechCollection": "ChatTech",
+    "ChatGeekCollection": "ChatGeek"
   },
   "ConnectionStrings": {
     "MongoDb": "mongodb://mongodb:27017"
