--- a/appsettings.json
+++ b/appsettings.json
@@ -4,7 +4,8 @@
     "DatabaseName": "ChatFatec",
     "ChatCollectionName": "ChatHub",
     "ChatTechCollection": "ChatTech",
-    "ChatGeekCollection": "ChatGeek"
+    "ChatGeekCollection": "ChatGeek",
+    "ChatSciCollection": "ChatSci"
   },
   "ConnectionStrings": {
     "MongoDb": "mongodb://mongodb:27017"
